--- a/contacto.html
+++ b/contacto.html
@@ -23,17 +23,14 @@
         }
     </style>
 </head>
-
 <body>
-    I'll only respond to those proposals that are a good match for my schedule and interests. thank you
-
-e-mail
-personal—jvscholz@gmail.com
-business—j@jvscholz.com
-secure—jvscholz@protonmail.com
-
-linkedin
-https://www.linkedin.com/in/jvscholz
+    <p>
+        correo:
+        <a href="mailto:victorucedaramirez@gmail.com">victorucedaramirez@gmail.com</a>
+        <br>
+        número: <a href="+51 901682201">901682201</a>
+        <br>
+    </p>  
 </body>
 
 </html>
