--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
 <body>
     <p>
         correo:
-        <a href="mailto:victoruceda@gmail.com">victoruceda@gmail.com</a>
+        <a href="mailto:victorhugouceda@gmail.com">victorhugouceda@gmail.com</a>
         <br>
         número: <a href="+51 901682201">901682201</a>
         <br>
