--- a/cv.html
+++ b/cv.html
@@ -54,7 +54,7 @@
     <ul>
         <li>Sistemas operativos: Linux, windows</li>
         <li>Lenguajes de programación: Java, Python, Bash, C++ (básico)</li>
-        <li>Bases de datos: SQL Server, SQLite / cualquiera sql</li>
+        <li>Bases de datos: SQL Server / sql</li>
         <li>Desarrollo web: HTML, CSS, JavaScript, React</li>
         <li>Otros: uso de terminal, ensamblaje de PC, automatización básica</li>
     </ul>
